--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
-    "framer-motion": "^11.0.13",
+    "framer-motion": "^11.0.12",
+    "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
