--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/x-date-pickers": "^6.19.7",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.12",
     "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
