--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "rsuite": "^5.57.0",
     "styled-components": "^6.1.8",
     "zod": "^3.22.4"
   },
